versioned_docs/version-3.1.0/features/moderation.md
---
title: Modération
---

Pour faciliter le travail de vos modérateurs, RaidProtect intègre des commandes de modération très pratiques qui vous permettent d’interagir directement avec les fonctionnalités natives de Discord, comme le **bannissement** et l’**expulsion** d’utilisateurs.

En plus de ces actions, RaidProtect envoie des messages privés à l’utilisateur sanctionné pour lui expliquer la raison de sa sanction, et cela est également enregistré dans les logs du serveur pour votre suivi.

:::info
Les commandes de modérations sont [utilisables par préfixe](../guides/prefix.md).
:::

## 🔨 Bannir un utilisateur {#ban}

Utilisez la commande : ```/ban [@utilisateur] [raison]```

Remplacez `[@utilisateur]` par la mention ou l’identifiant souhaité et `[raison]` par le motif de la sanction.

:::tip
Vous pouvez bannir un utilisateur à partir de son [identifiant Discord](https://dfr.gg/wiki/interface/mode-developpeur), même s’il n’est pas connecté ou présent sur votre serveur.
:::

## 👢 Expulser un utilisateur {#kick}

Utilisez la commande : ```/kick [@utilisateur] [raison]```

Remplacez `[@utilisateur]` par la mention ou l’identifiant souhaité et `[raison]` par le motif de la sanction.